@@ -1,4 +1,4 @@
-package com.currency.price.parsers;
+package com.currency.price.model;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -6,13 +6,13 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.SequenceGenerator;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -22,10 +22,11 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class Currency {
     @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "CURRENCY_SEQ")
+    @SequenceGenerator(name = "CURRENCY_SEQ", sequenceName = "CURRENCY_SEQ", allocationSize = 1)
     private Integer id;
 
-    private String name;
+    private String currency;
 
     private Double buy;
 
@@ -35,9 +36,21 @@ public class Currency {
 
     private String bank;
 
+    public Currency(String currency, String buy, String sell) {
+        this.currency = currency;
+        try {
+            this.buy = Double.parseDouble(buy);
+            this.sell = Double.parseDouble(sell);
+        } catch (NumberFormatException nfe) {
+            this.buy = 0.0;
+            this.sell = 0.0;
+        }
+
+    }
+
     public static Currency toCurrency(String string) {
         List<String> list = Arrays.stream(string.split(" "))
-                .collect(Collectors.toList());
+                .toList();
         try {
             return getCurrency(list.get(0), Double.parseDouble(list.get(1)), Double.parseDouble(list.get(2)));
         } catch (NumberFormatException nfe) {
@@ -47,7 +60,7 @@ public class Currency {
 
     private static Currency getCurrency(String name, Double buy, Double sell) {
         return Currency.builder()
-                .name(name)
+                .currency(name)
                 .buy(buy)
                 .sell(sell)
                 .build();
